# aeration-flexibility

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc_improvement.md  submit_question.md  test_coverage.md
.github/workflows/: build.yml  docs.yml  publish.yml  test.yml
aeration_flexibility/: plot_weekly_profiles.py  run_all.py
aeration_flexibility/configs/: nr_comparison_svcw.json  speed_test.json  speed_test_o2.json  tornado_svcw_psa.json  upgrades_ebmud_data_ebmud_tariff_40mgd.json  upgrades_ebmud_data_ebmud_tariff_original.json  upgrades_ebmud_data_svcw_tariff_40mgd.json  upgrades_svcw_data_svcw_tariff_40mgd.json  upgrades_svcw_data_svcw_tariff_original.json  wwtp_comparison_ebmud_40mgd.json  wwtp_comparison_ebmud_80mgd.json  wwtp_comparison_svcw_13mgd.json  wwtp_comparison_svcw_40mgd.json
aeration_flexibility/data/: inflation.csv
aeration_flexibility/data/billing/: 12000017004_mdwasd_central_district_wwtf.csv  12000053001_howard_f_curren_awtp.csv  18000061001_city_of_indianapolis_.csv  24000001002_patapsco_wwtp.csv  (+28 more)
aeration_flexibility/helpers/: capex_npv_energy_metrics.py  config_labels.py  design_optimization_algorithm.py  ingest_data.py  local_visualize.py  operational_optimization_problem.py  parameters.py  plotting.py  tariffs.py  var_dict.json
literature_analysis/: energy_intensities.csv  energy_intensities.py  plot_tank_costs.py
{{cookiecutter.project_slug}}/: MANIFEST.in  README.rst  setup.py
{{cookiecutter.project_slug}}/docs/: index.rst
(+5 files in other folders)
