[tool.poetry]
name = "aeration-flexibility"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
seaborn = "0.13.2"
idaes-pse = "2.7.0"
ipykernel = "6.29.5"
griddata = "0.1.0"
pyomo = "6.9.2"
pype-schema = {path = "../pype-schema", develop = true}
electric-emission-cost = {git = "https://github.com/we3lab/electric-emission-cost.git", rev = "feature/decompose_consumption"}
flows-prep = {path = "../flows-prep", develop = true}
numpy = "1.26.4"
pandas = "2.2.2"
scipy = "1.15.3"
matplotlib = "3.10.3"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"